<resources>
    <string name="app_name">clase04_02</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="menu_listado">Listado</string>
    <string name="menu_grilla">Grilla</string>
    <string name="menu_registro_listado">Registro Listado</string>
    <string name="menu_registro_grilla">Registro Grilla</string>
    <string name="menu_registro_tipo">Registro Tipo</string>
    <string name="lbl_imagen">Imagen</string>
    <string name="lbl_link">Link</string>
    <string name="lbl_guardar">Guardar</string>
    <string name="lbl_tipo">Tipo</string>
    <string name="lbl_nombre">Nombre</string>
    <string name="lbl_producto">Producto</string>
    <string name="lbl_descripcion">Descripción</string>
    <string name="lbl_precio">Precio</string>
</resources>
